Fix catalog card on safari mobile (#652)
* fix catalog card on safari mobile

* fix start battle button on ie

--- a/packages/@coorpacademy-components/src/organism/cards-grid/style.css
+++ b/packages/@coorpacademy-components/src/organism/cards-grid/style.css
@@ -43,5 +43,6 @@
 
   .card {
     margin: 4px 0px;
+    width: 100%;
   }
 }
